# owlclaw

./: .gitignore  .twscrape.db  AGENTS.md  CLAUDE.md  README.md  accounts.db  package.json  pyproject.toml
.claude/: launch.json  settings.json
config/: profile.yaml  pronunciations.yaml  sources.yaml
prompts/: arxiv-digest.md  birthday-month.md  blog-watch.md  bluesky-papers.md  claude_task.md  daily-digest.md  daily_digest.md  departure-time.md  payment-watch.md  podcast-digest.md  standing-order.md  travel-checklist.md  travel-watch.md  twitter-digest.md  video-script.md  visit-briefing.md
scripts/: _exec.py  auth_calendar.py  auth_drive.py  auth_gmail.py  auth_youtube.py  check_video_digest.py  compose_video.py  doctor_google_auth.py  doctor_video_digest.py  fetch_rss.py  install_cli_updaters_launchd.sh  oneshot.sh  orchestrator.py  poc_video.sh  render_audio.py  render_html.js  render_slides.py  run.sh  run_full.sh  run_task.sh  setup-remote.sh  setup_host.sh  slack_notify.sh  state.py  update_claude.sh  update_codex.sh  write_obsidian.sh
sources/: arxiv.py  base.py  bluesky.py  calendar.py  gmail.py  podcast.py  rss.py  twitter.py
spec/: google-drive-setup.md  implementation-plan.md  remote-setup.md  usecases.md  video-lifecycle.md  video-pipeline.md  vision.md  voicevox-server.md
tasks/: arxiv-digest.yaml  birthday-month.yaml  blog-watch.yaml  bluesky-papers.yaml  daily-digest.yaml  departure-time.yaml  payment-watch.yaml  podcast-digest.yaml  travel-checklist.yaml  travel-watch.yaml  twitter-digest.yaml  video-digest.yaml  visit-briefing.yaml
templates/: closing.html.j2  cover.html.j2  exhibit.html.j2  kpi_three_col.html.j2  summary.html.j2
tests/: test_check_video_digest.py  test_doctor_video_digest.py  test_obsidian_output.py  test_orchestrator_ai.py  test_render_audio.py  (+22 more)
(+12 files in other folders)
