[project]
name = "owlclaw"
version = "0.1.0"
description = "AI news digest pipeline: RSS fetch → LLM curation → Obsidian + Slack"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "google-api-python-client>=2.120",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "youtube-transcript-api>=0.6",
    "arxiv>=2.1",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "tweepy>=4.14",
    "python-dotenv>=1.0",
    "pydantic>=2.13.3",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I"]
ignore = []
